tests/src/frontend/visibility/invalid/module_protected_fun.sk
module Foo;

protected fun bar() : Int { 112 }

module end;

